fix folder structure

--- a/index.html
+++ b/index.html
@@ -305,6 +305,6 @@
       </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="/dist/index.js"></script>
   </body>
 </html>
