fix clearInput error

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body class="overflow-hidden">
     <!-- Calculator Content -->
@@ -305,6 +305,6 @@
       </div>
     </div>
 
-    <script src="/dist/index.js"></script>
+    <script src="./dist/index.js"></script>
   </body>
 </html>
